fix modernizer waarschuwingen in brmo-taglib module